src/test/ui/feature-gates/feature-gate-extern_crate_self.stderr
error[E0658]: `extern crate self` is unstable (see issue #54658)
  --> $DIR/feature-gate-extern_crate_self.rs:1:1
   |
LL | extern crate self as foo; //~ ERROR `extern crate self` is unstable
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(extern_crate_self)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
