src/test/ui/feature-gates/feature-gate-extern_crate_self.rs
extern crate self as foo; //~ ERROR `extern crate self` is unstable

fn main() {}
